--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Selena's Note"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Selena(Hangyeol) Park"
-description              : "An amazing website."
+description              : "This blog was created for the purpose of sharing knowledge and studying."
 url                      : "https://Selenapark.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
